# cornerstone

./: .gitignore  README.md  build.yml  pyproject.toml
configs/: box_api.json  mlflow.yaml
docs/: build_docs.sh  overview.md
docs/formatting/: extra.css
src/features/: build_features.py
src/logging/: logger.py
src/models/: train.py
src/utils/: helpers.py
