[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "A template for data science projects"
authors = ["Matt Batacan <mattbatacan@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
scipy = "*"
jupyterlab = "*"
notebook = "*"
statsmodels = "*"
xgboost = "*"
lightgbm = "*"
joblib = "*"
plotly = "*"
mlflow = "*"
pydantic = "*"
sqlalchemy = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
ruff = "*"
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
ipykernel = "*"
mkdocs = "*"
mkdocs-git-revision-date-plugin = "*"
pymdown-extensions = "*"
mkdocs-material = "*"
mkdocs-autorefs = "*"
types-PyYAML = "*"
mypy = "*"

[tool.black]
exclude = "^tests/"
line-length = 88
skip-string-normalization = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
